Fill multiples time with NewPasswordFormManager.

PasswordFormManager fills multiple times on different events from the
Renderer. That's not optimal from performance point of view, but it adds
robustness. This CL implements the same behaviour in
NewPasswordFormManager as in PasswordFormManager: to fill till 5 times.

This is quick fix, that will be merged in M-69. The better more
robust filling is more complicated and will be implemented later.

Bug: 868948, 831123
Change-Id: I44c93c5358b0e6707c545001f5f1a1fb7b60eec3
Reviewed-on: https://chromium-review.googlesource.com/1155116
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579777}
Former-commit-id: f0b656aa075ce3bcd25869e84a97353ab515e23a